--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.16",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
-    "typescript": "^3.7.3"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
